--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,11 @@
     background-color: #fff;
 }
 
+.bg-color-personal-info {
+    background-color: #f4f4f4
+}
+
+
 .ui-menu-color-home {
     background-color: #e67e22;
 }
@@ -205,4 +210,16 @@ footer {
 
 #footer-details {
     padding: 20px;
+}
+
+/* --------------------------------------------------------- Three reasons */ 
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
+
 }
